# RuneReaderVoice

./: .gitmodules  LICENSE  PROJECT_RULES.md  README.md  RuneReaderVoice.sln
RRV Notes/: Design Runereader Voice v12.md  Design_RuneReader_Voice_v14.md  Design_RuneReader_Voice_v15.md  Design_RuneReader_Voice_v16.md  Design_RuneReader_Voice_v17.md  Design_RuneReader_Voice_v18.md  Design_RuneReader_Voice_v19.md  Design_RuneReader_Voice_v20.md  Design_RuneReader_Voice_v21.md  Design_RuneReader_Voice_v22.md  Design_RuneReader_Voice_v23.md  Design_RuneReader_Voice_v24.md  Design_RuneReader_Voice_v25.md  Design_RuneReader_Voice_v26.md  Design_Runereader_Voice_v13.md  Provider Tests.md  npc-voice-overrides.json  text-swap-rules.json  voice-profiles-remote-chatterbox.json
RuneReaderVoice/: AppServices.cs  Base45Simple.cs  Program.cs  RELEASE-PROCESS.md  RuneReaderVoice.csproj  VoiceUserSettings.cs  build-release-local.ps1  build-release.ps1  index.template.html
RuneReaderVoice/Data/: NpcPeopleCatalogService.cs  NpcPeopleCatalogStore.cs  NpcPeopleSeedCatalog.cs  NpcRaceOverride.cs  NpcRaceOverrideDb.cs  ProviderSlotProfileStore.cs  RvrDb.cs  VoiceSlotCatalogRow.cs
RuneReaderVoice/Models/: kokoro-quant.onnx
RuneReaderVoice/Platform/: IVoicePlatformServices.cs  VoicePlatformFactory.cs
RuneReaderVoice/Protocol/: AccentGroup.cs  RvPacket.cs
RuneReaderVoice/Session/: RvBarcodeMonitor.cs  TtsSessionAssembler.cs
RuneReaderVoice/Sync/: NpcSyncService.cs  ServerDefaultsClient.cs  UpdateService.cs
RuneReaderVoice/TTS/: HtmlRenderedTextExtractor.cs  HtmlTextStripper.cs  PlaybackCoordinator.cs  RecentSpeechSuppressor.cs  TextNormalizer.cs
RuneReaderVoice/UI/: App.axaml  App.axaml.cs
RuneReaderVoice/config/: npc-voice-overrides.json  pronunciation-rules.json  race-catalog.json  text-swap-rules.json  voice-profiles-all-providers.json  voice-sample-profiles.json
Server/: .env.example  .gitignore  Dockerfile  INSTALL_UBUNTU.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  rrv_server_proxmox_debian_install_guide.md
Server/benchmark/: rrv_benchmark.py
Server/data/models/: MODELS.txt
Server/data/samples/: SAMPLES.txt
Server/rrv-chatterbox/: run_worker.py
Server/rrv-cosyvoice/: run_worker.py
Server/rrv-cosyvoice-vllm/: run_worker.py
Server/rrv-crisper-whisper/: run_asr_worker.py
Server/rrv-f5/: run_worker.py
Server/rrv-longcat/: full_working_test_speed.py  run_worker.py
Server/rrv-lux/: run_worker.py
Server/rrv-qwen/: run_worker.py
Server/rrv-server/: .env.example  INSTALL_UBUNTU.md  pyproject.toml
Server/rrv-server/server/: .env.example  __init__.py  asr_worker.py  cache.py  community_db.py  config.py  gpu_detect.py  main.py  manager.py  sample_extractor.py  samples.py  sync_db.py  text_normalize.py  transcriber.py  utils.py  worker.py
Server/rrv-server/server/asr/: __init__.py  base.py  cohere_transcribe_provider.py  crisper_whisper_provider.py  qwen_asr_provider.py  whisper_asr.py  worker_asr.py
Server/rrv-server/server/backends/: __init__.py  audio.py  base.py  chatterbox_backend.py  chatterbox_full_backend.py  chatterbox_multilingual_backend.py  cosyvoice_backend.py  cosyvoice_vllm_backend.py  f5tts_backend.py  kokoro_backend.py  longcat_backend.py  lux_backend.py  qwen_backend.py  worker_backend.py
Server/rrv-server/server/routes/: __init__.py  capabilities.py  defaults.py  npc_overrides.py  npc_people.py  provider_slot_profiles.py  synthesize.py  synthesize_v2.py
Server/rrv-whisper/: run_asr_worker.py
Server/server/: .env.example  __init__.py  cache.py  community_db.py  config.py  gpu_detect.py  main.py  sample_extractor.py  samples.py  transcriber.py  voice_profiler.py
Server/server/backends/: __init__.py  audio.py  base.py  chatterbox_backend.py  chatterbox_full_backend.py  chatterbox_multilingual_backend.py  f5tts_backend.py  kokoro_backend.py
Server/server/routes/: capabilities.py  defaults.py  health.py  npc_overrides.py  providers.py  synthesize.py  synthesize_v2.py
(+71 files in other folders)
